--- a/design1.css
+++ b/design1.css
@@ -1,6 +1,7 @@
 ﻿body {
     display: flex;
     flex-direction: row;
+    height:100vh;
 }
 .pnllinks {
     display: flex;
@@ -10,21 +11,42 @@
 .lnkdetails{
     width:25%
 }
+.pnlcontent{
+    height:100vh;
+    width:100vw;
+}
 .pnlfooter{
     display:flex;
     flex-direction:column;
     margin-bottom: 0px;
+    color:white;
 }
 .loginMain{
     display:flex;
     justify-content:center;
+    margin-top:30px;
     align-items:center;
     flex-direction:column;
+}
+.pnlfootermain{
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .divbtn {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
+}
+.lnkbtns{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    width:20%;
+    padding:10px;
+    margin:10px;
 }
 
