--- a/design1.css
+++ b/design1.css
@@ -15,6 +15,8 @@
     height:100vh;
     width:100vw;
     color:white;
+    display:flex;
+    flex-direction:column;
 }
 .pnlfooter{
     display:flex;
